library_media_stats for libraries page

--- a/data/interfaces/default/libraries.html
+++ b/data/interfaces/default/libraries.html
@@ -41,6 +41,8 @@
                 <th align="left" id="last_played">Last Played</th>
                 <th align="left" id="total_plays">Total Plays</th>
                 <th align="left" id="total_duration">Total Played Duration</th>
+                <th align="left" id="total_storage">Total Storage</th>
+                <th align="left" id="total_runtime">Total Runtime</th>
             </tr>
             </thead>
             <tbody>
