Add time formats to order of notification text modifiers

--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -2009,7 +2009,7 @@ Rating: {rating}/10   --> Rating: /10
                             <li>Evaluation</li>
                             <li>Parameter</li>
                             <li>Case Modifier</li>
-                            <li>List Slicing</li>
+                            <li>Time Formats / List Slicing</li>
                             <li>Suffix</li>
                         </ol>
                         <p><strong style="color: #fff;">Example:</strong></p>
