Add no-referrer policy

--- a/data/interfaces/default/support.html
+++ b/data/interfaces/default/support.html
@@ -30,7 +30,7 @@
         <div class="iframe-container">
             <iframe class="iframe" allowfullscreen="true" id="support-iframe" data-name="Tautulli-Support" data-src="https://support.tautulli.com"
                     sandbox="allow-presentation allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals allow-top-navigation"
-                    style="display: none;">
+                    style="display: none;" rel="noreferrer">
             </iframe>
             <div class="iframe-overlay">
                 <div class="iframe-button-container">
