Fix typo related to scroller, fix scrolling
- fixes #2221 by adding `overflow: scroll` to tautulli.css.
- fixes scroller-content typo

--- a/data/interfaces/default/index.html
+++ b/data/interfaces/default/index.html
@@ -236,7 +236,7 @@
 
     function lockScroll(elem) {
         $(elem).each(function (i, instance)  {
-            var childHeight = $(instance).children('.scoller-content').height();
+            var childHeight = $(instance).children('.scroller-content').height();
             var height = $(instance).height();
             var scrollHeight = $(instance).get(0).scrollHeight;
 
