--- a/data/interfaces/default/current_activity_instance.html
+++ b/data/interfaces/default/current_activity_instance.html
@@ -148,7 +148,7 @@ DOCUMENTATION :: END
             </div>
             <div class="dashboard-activity-info-container">
                 <div class="dashboard-activity-info-scroller scrollbar-macosx">
-                    <div class="dashboard-activity-info scoller-content">
+                    <div class="dashboard-activity-info scroller-content">
                         <ul class="list-unstyled dashboard-activity-info-list">
                             <li class="dashboard-activity-info-item">
                                 <div class="sub-heading">Product</div>
