--- a/data/interfaces/default/home_stats.html
+++ b/data/interfaces/default/home_stats.html
@@ -141,7 +141,7 @@ DOCUMENTATION :: END
                     % endif
                 </div>
                 <div class="dashboard-stats-info-scroller scrollbar-macosx">
-                    <div class="dashboard-stats-info scoller-content">
+                    <div class="dashboard-stats-info scroller-content">
                         <ul class="list-unstyled dashboard-stats-info-list">
                             % for row in top_stat['rows']:
                             <li class="dashboard-stats-info-item ${'expanded' if loop.index == 0 else ''}" data-stat_id="${stat_id}"
