--- a/data/interfaces/default/library_stats.html
+++ b/data/interfaces/default/library_stats.html
@@ -52,7 +52,7 @@ DOCUMENTATION :: END
                     <span class="dashboard-stats-stats-units">${' / '.join(u for u in headers[section_type][1] if u)}</span>
                 </div>
                 <div class="dashboard-stats-info-scroller scrollbar-macosx">
-                    <div class="dashboard-stats-info scoller-content">
+                    <div class="dashboard-stats-info scroller-content">
                         <ul class="list-unstyled dashboard-stats-info-list">
                             % for section in data[section_type]:
                             <li class="dashboard-stats-info-item ${'expanded' if loop.index == 0 else ''}" data-stat_id="${section_type}"
