Make recent rows touch scrollable

--- a/data/interfaces/default/library.html
+++ b/data/interfaces/default/library.html
@@ -149,10 +149,10 @@ DOCUMENTATION :: END
                                     <div class="table-card-header">
                                         <ul class="nav nav-header nav-dashboard pull-right">
                                             <li>
-                                                <a href="#" id="recently-watched-page-left" class="paginate-watched btn-gray disabled" data-id="+1"><i class="fa fa-lg fa-chevron-left"></i></a>
+                                                <a href="#" id="recently-watched-page-left" class="paginate-watched btn-gray disabled" data-id="-1"><i class="fa fa-lg fa-chevron-left"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#" id="recently-watched-page-right" class="paginate-watched btn-gray disabled" data-id="-1"><i class="fa fa-lg fa-chevron-right"></i></a>
+                                                <a href="#" id="recently-watched-page-right" class="paginate-watched btn-gray disabled" data-id="+1"><i class="fa fa-lg fa-chevron-right"></i></a>
                                             </li>
                                         </ul>
                                         <div class="header-bar">
@@ -175,10 +175,10 @@ DOCUMENTATION :: END
                                     <div class="table-card-header">
                                         <ul class="nav nav-header nav-dashboard pull-right">
                                             <li>
-                                                <a href="#" id="recently-added-page-left" class="paginate-added btn-gray disabled" data-id="+1"><i class="fa fa-lg fa-chevron-left"></i></a>
+                                                <a href="#" id="recently-added-page-left" class="paginate-added btn-gray disabled" data-id="-1"><i class="fa fa-lg fa-chevron-left"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#" id="recently-added-page-right" class="paginate-added btn-gray disabled" data-id="-1"><i class="fa fa-lg fa-chevron-right"></i></a>
+                                                <a href="#" id="recently-added-page-right" class="paginate-added btn-gray disabled" data-id="+1"><i class="fa fa-lg fa-chevron-right"></i></a>
                                             </li>
                                         </ul>
                                         <div class="header-bar">
@@ -745,48 +745,48 @@ DOCUMENTATION :: END
 
     $('div.art-face').animate({ opacity: 0.2 }, { duration: 1000 });
 
-    var leftTotalWatched = 0;
     $(".paginate-watched").click(function (e) {
         e.preventDefault();
         var scroller = $("#recently-watched-row-scroller");
+        var scrollerParent = scroller.parent();
         var containerWidth = $("#library-recently-watched").width();
+        var scrollCurrent = scrollerParent.scrollLeft();
         var scrollAmount = $(this).data("id") * parseInt(containerWidth / 175) * 175;
-        var leftMax = Math.min(-parseInt(scroller.width()) + Math.abs(scrollAmount), 0);
+        var scrollMax = parseInt(scroller.width()) - Math.abs(scrollAmount);
+        var scrollTotal = Math.min(scrollCurrent + scrollAmount, scrollMax);
+        scrollerParent.animate({ scrollLeft: scrollTotal }, 250);
 
-        leftTotalWatched = Math.max(Math.min(leftTotalWatched + scrollAmount, 0), leftMax);
-        scroller.animate({ left: leftTotalWatched }, 250);
-
-        if (leftTotalWatched == 0) {
+        if (scrollTotal == 0) {
             $("#recently-watched-page-left").addClass("disabled").blur();
         } else {
             $("#recently-watched-page-left").removeClass("disabled");
         }
 
-        if (leftTotalWatched == leftMax) {
+        if (scrollTotal == scrollMax) {
             $("#recently-watched-page-right").addClass("disabled").blur();
         } else {
             $("#recently-watched-page-right").removeClass("disabled");
         }
     });
 
-    var leftTotalAdded = 0;
     $(".paginate-added").click(function (e) {
         e.preventDefault();
         var scroller = $("#recently-added-row-scroller");
+        var scrollerParent = scroller.parent();
         var containerWidth = $("#library-recently-added").width();
+        var scrollCurrent = scrollerParent.scrollLeft();
         var scrollAmount = $(this).data("id") * parseInt(containerWidth / 175) * 175;
-        var leftMax = Math.min(-parseInt(scroller.width()) + Math.abs(scrollAmount), 0);
+        var scrollMax = parseInt(scroller.width()) - Math.abs(scrollAmount);
+        var scrollTotal = Math.min(scrollCurrent + scrollAmount, scrollMax);
+        scrollerParent.animate({ scrollLeft: scrollTotal }, 250);
 
-        leftTotalAdded = Math.max(Math.min(leftTotalAdded + scrollAmount, 0), leftMax);
-        scroller.animate({ left: leftTotalAdded }, 250);
-
-        if (leftTotalAdded == 0) {
+        if (scrollTotal == 0) {
             $("#recently-added-page-left").addClass("disabled").blur();
         } else {
             $("#recently-added-page-left").removeClass("disabled");
         }
 
-        if (leftTotalAdded == leftMax) {
+        if (scrollTotal == scrollMax) {
             $("#recently-added-page-right").addClass("disabled").blur();
         } else {
             $("#recently-added-page-right").removeClass("disabled");
