--- a/data/interfaces/default/user.html
+++ b/data/interfaces/default/user.html
@@ -125,10 +125,10 @@ DOCUMENTATION :: END
                                     <div class="table-card-header">
                                         <ul class="nav nav-header nav-dashboard pull-right">
                                             <li>
-                                                <a href="#" id="recently-watched-page-left" class="paginate btn-gray disabled" data-id="+1"><i class="fa fa-lg fa-chevron-left"></i></a>
+                                                <a href="#" id="recently-watched-page-left" class="paginate btn-gray disabled" data-id="-1"><i class="fa fa-lg fa-chevron-left"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#" id="recently-watched-page-right" class="paginate btn-gray" data-id="-1"><i class="fa fa-lg fa-chevron-right"></i></a>
+                                                <a href="#" id="recently-watched-page-right" class="paginate btn-gray" data-id="+1"><i class="fa fa-lg fa-chevron-right"></i></a>
                                             </li>
                                         </ul>
                                         <div class="header-bar">
@@ -688,24 +688,24 @@ DOCUMENTATION :: END
         highlightWatchedScrollerButton();
     });
 
-    var leftTotal = 0;
     $(".paginate").click(function (e) {
         e.preventDefault();
         var scroller = $("#recently-watched-row-scroller");
+        var scrollerParent = scroller.parent();
         var containerWidth = $("#user-recently-watched").width();
+        var scrollCurrent = scrollerParent.scrollLeft();
         var scrollAmount = $(this).data("id") * parseInt(containerWidth / 175) * 175;
-        var leftMax = Math.min(-parseInt(scroller.width()) + Math.abs(scrollAmount), 0);
+        var scrollMax = parseInt(scroller.width()) - Math.abs(scrollAmount);
+        var scrollTotal = Math.min(scrollCurrent + scrollAmount, scrollMax);
+        scrollerParent.animate({ scrollLeft: scrollTotal }, 250);
 
-        leftTotal = Math.max(Math.min(leftTotal + scrollAmount, 0), leftMax);
-        scroller.animate({ left: leftTotal }, 250);
-
-        if (leftTotal == 0) {
+        if (scrollTotal == 0) {
             $("#recently-watched-page-left").addClass("disabled").blur();
         } else {
             $("#recently-watched-page-left").removeClass("disabled");
         }
 
-        if (leftTotal == leftMax) {
+        if (scrollTotal == scrollMax) {
             $("#recently-watched-page-right").addClass("disabled").blur();
         } else {
             $("#recently-watched-page-right").removeClass("disabled");
