--- a/data/interfaces/default/user_recently_watched.html
+++ b/data/interfaces/default/user_recently_watched.html
@@ -31,7 +31,7 @@ DOCUMENTATION :: END
     from plexpy.helpers import page, short_season
 %>
 <div class="dashboard-recent-media-row">
-    <div id="recently-watched-row-scroller" style="left: 0;">
+    <div id="recently-watched-row-scroller">
         <ul class="dashboard-recent-media list-unstyled">
             % for item in data:
             <li>
