--- a/data/interfaces/default/index.html
+++ b/data/interfaces/default/index.html
@@ -92,10 +92,10 @@
                 <h3 class="pull-left"><span id="recently-added-xml">Recently Added</span></h3>
                 <ul class="nav nav-header nav-dashboard pull-right" style="margin-top: -3px;">
                     <li>
-                        <a href="#" id="recently-added-page-left" class="paginate btn-gray disabled" data-id="+1"><i class="fa fa-lg fa-chevron-left"></i></a>
+                        <a href="#" id="recently-added-page-left" class="paginate btn-gray disabled" data-id="-1"><i class="fa fa-lg fa-chevron-left"></i></a>
                     </li>
                     <li>
-                        <a href="#" id="recently-added-page-right" class="paginate btn-gray disabled" data-id="-1"><i class="fa fa-lg fa-chevron-right"></i></a>
+                        <a href="#" id="recently-added-page-right" class="paginate btn-gray disabled" data-id="+1"><i class="fa fa-lg fa-chevron-right"></i></a>
                     </li>
                 </ul>
                 <div class="button-bar">
@@ -971,29 +971,28 @@
     });
 
     function resetScroller() {
-        leftTotal = 0;
-        $("#recently-added-row-scroller").animate({ left: leftTotal }, 1000);
+        $(".dashboard-recent-media-row").animate({ scrollLeft: 0 }, 1000);
         $("#recently-added-page-left").addClass("disabled").blur();
     }
 
-    var leftTotal = 0;
     $(".paginate").click(function (e) {
         e.preventDefault();
         var scroller = $("#recently-added-row-scroller");
+        var scrollerParent = scroller.parent();
         var containerWidth = $("body").find(".container-fluid").width();
+        var scrollCurrent = scrollerParent.scrollLeft();
         var scrollAmount = $(this).data("id") * parseInt((containerWidth - 15) / 175) * 175;
-        var leftMax = Math.min(-parseInt(scroller.width()) + Math.abs(scrollAmount), 0);
+        var scrollMax = parseInt(scroller.width()) - Math.abs(scrollAmount);
+        var scrollTotal = Math.min(scrollCurrent + scrollAmount, scrollMax);
+        scrollerParent.animate({ scrollLeft: scrollTotal }, 250);
 
-        leftTotal = Math.max(Math.min(leftTotal + scrollAmount, 0), leftMax);
-        scroller.animate({ left: leftTotal }, 250);
-
-        if (leftTotal === 0) {
+        if (scrollTotal === 0) {
             $("#recently-added-page-left").addClass("disabled").blur();
         } else {
             $("#recently-added-page-left").removeClass("disabled");
         }
 
-        if (leftTotal === leftMax) {
+        if (scrollTotal === scrollMax) {
             $("#recently-added-page-right").addClass("disabled").blur();
         } else {
             $("#recently-added-page-right").removeClass("disabled");
@@ -1005,17 +1004,17 @@
         selected_filter = $('input[name=recently-added-toggle]:checked', '#recently-added-toggles');
         $(selected_filter).closest('label').addClass('active');
         recently_added_type = $(selected_filter).val();
-        resetScroller();
         setLocalStorage('home_stats_recently_added_type', recently_added_type);
         recentlyAdded(recently_added_count, recently_added_type);
+        resetScroller();
     });
 
     $('#recently-added-count').change(function () {
         forceMinMax($(this));
         recently_added_count = $(this).val();
-        resetScroller();
         setLocalStorage('home_stats_recently_added_count', recently_added_count);
         recentlyAdded(recently_added_count, recently_added_type);
+        resetScroller();
     });
 
     $('#recently-added-count').tooltip({ container: 'body', placement: 'top', html: true });
