--- a/data/interfaces/default/recently_added.html
+++ b/data/interfaces/default/recently_added.html
@@ -36,7 +36,7 @@ DOCUMENTATION :: END
 %>
 % if data:
 <div class="dashboard-recent-media-row">
-    <div id="recently-added-row-scroller" style="left: 0;">
+    <div id="recently-added-row-scroller">
         <ul class="dashboard-recent-media list-unstyled">
             % for item in data:
             <div class="dashboard-recent-media-instance">
